--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/grayscale.js"></script>
+    <script src="assets/js/script.min.js"></script>
 </body>
 
 </html>
