--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="border-bottom-color: rgb(255,255,255);color: rgb(255,255,255);">
 
 <head>
     <meta charset="utf-8">
@@ -9,28 +9,25 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alike+Angular&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather+Sans&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
-<body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
-    <nav class="navbar navbar-light navbar-expand-md fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="#">Kumo Inc.</a><button data-bs-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item nav-link"><a class="nav-link active" href="#about">About</a></li>
-                    <li class="nav-item nav-link"><a class="nav-link" href="#download">download</a></li>
-                    <li class="nav-item nav-link"><a class="nav-link" href="#contact">contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77" style="background: rgb(255,255,255);">
     <header class="masthead" style="background-image:url('assets/img/intro-bg.jpg');">
-        <div class="intro-body">
+        <div class="intro-body" style="font-family: 'Noto Sans JP', sans-serif;">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <h1 class="brand-heading">Lordkumo</h1>
-                        <p class="intro-text">A free, responsive and loving Badlion Client Moderator.<br><br></p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a>
+                    <div class="col-lg-8 mx-auto" style="height: 377px;">
+                        <p class="intro-text"></p>
+                        <p class="swing animated intro-text" style="height: 0px;">Hey,</p>
+                        <h1 class="brand-heading" style="font-family: 'Merriweather Sans', sans-serif;height: 96px;font-size: 115px;">I am kumo</h1>
+                        <p class="intro-text" style="height: 30px;min-height: 14px;font-style: italic;font-family: 'Alike Angular', serif;">"Only a life lived for others is a life worthwhile."</p><a class="btn btn-link btn-circle" role="button" href="#about" style="border-radius: 9px;"><i class="fa fa-angle-double-down animated"></i></a>
                     </div>
                 </div>
             </div>
@@ -38,47 +35,43 @@
     </header>
     <section class="text-center content-section" id="about">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h2>About grayscale</h2>
-                    <p>Grayscale is a free Bootstrap theme. It can be yours right now, simply download the template on&nbsp;<a href="#">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                    <p>This theme features stock photos by&nbsp;<a href="#">Gratisography</a>&nbsp;along with a custom Google Maps skin courtesy of&nbsp;<a href="#">Snazzy Maps</a>.</p>
-                    <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
+            <div class="row" style="color: rgb(0,0,0);">
+                <div id="aboutme" class="col-lg-8 mx-auto">
+                    <h2 style="color: rgb(0,0,0);">About ME</h2>
+                    <p style="color: rgb(0,0,0);">I am Lord Kumo, a Badlion Client Moderator from Germany.<br><br>I am a determined, helpful and friendly person. I always do my best when it comes to helping out other people.<br><br>You can find me under the surname "DrKumo" on the Badlion Discord, but also in various other places. You can <strong><em>tag</em></strong> or <strong><em>direct message</em></strong>&nbsp;me whenever you require help, have a question or simply want to talk a bit.</p>
+                    <p>You can find my socials right below if you wish to contact me.</p>
+                    <p style="font-style: italic;">"Master Kumo is my hero." ~Pep<br>"A truly wonderful, helpful and amazing person." ~WitherTrx<br>"He's kind and supported me during family issues." ~Anonymous</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="text-center download-section content-section" id="download" style="background-image:url('assets/img/downloads-bg.jpg');">
-        <div class="container">
-            <div class="col-lg-8 mx-auto">
-                <h1>Download Grayscale</h1>
-                <p>You can download Grayscale for free on the preview page.</p><button class="btn btn-primary btn-lg btn-default" type="button">visit download page</button>
-            </div>
+    <section class="text-center download-section content-section" id="contact" style="background-image:url('assets/img/downloads-bg.jpg');">
+        <div class="col-lg-8 mx-auto">
+            <h2>Contact Me</h2>
+            <p>Feel free to contact me through Discord or Twitter if you would like to!</p>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a style="text-decoration: none;" href="https://discord.gg/badlion" ><img src="assets/img/discord.png" width="50px" height="50px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            <a style="text-decoration: none;" href="https://twitter.com/kumoof" ><img src="assets/img/twitter.png" width="50px" height="50px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
         </div>
     </section>
-    <section class="text-center content-section" id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h2>Contact us</h2>
-                    <p>Feel free to leave us a comment on the<a href="#">&nbsp;Grayscale template overview page</a>&nbsp;to give some feedback about this theme!</p>
-                    <ul class="list-inline banner-social-buttons">
-                        <li class="list-inline-item">&nbsp;<button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-google-plus fa-fw"></i><span class="network-name">&nbsp; Google+</span></button></li>
-                        <li class="list-inline-item">&nbsp;<button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-twitter fa-fw"></i><span class="network-name">&nbsp;Twitter</span></button></li>
-                        <li class="list-inline-item">&nbsp;<button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbsp;github</span></button></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-    <div class="map-clean"><iframe allowfullscreen="" frameborder="0" src="https://cdn.bootstrapstudio.io/placeholders/map.html" width="100%" height="450"></iframe></div>
-    <footer>
+    <footer style="text-align: center;">
         <div class="container text-center">
-            <p>Copyright ©&nbsp;Kumo Inc. 2021</p>
+            <p style="color: rgb(0,0,0);font-size: 15px;text-align: center;">Made with 🖤&nbsp;<br></p>
         </div>
     </footer>
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
+        <div class="container"><a class="navbar-brand logo" href="#" style="font-family: 'Merriweather Sans', sans-serif;font-weight: bold;">LORD KUMO</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1" style="font-family: Cabin, sans-serif;">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#about">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#contact">Contact Me</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/script.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="assets/js/clean-blog.js"></script>
 </body>
 
 </html>
